@@ -57,16 +57,31 @@ dependencies {
 
     // Spring Security test (WithMockUser, MockMvc ile güvenlik)
     testImplementation 'org.springframework.security:spring-security-test'
+    testImplementation 'org.testcontainers:junit-jupiter:1.21.3'
+    testImplementation 'org.testcontainers:postgresql:1.21.3'
+
 
     // Mockito (unit testlerde mock için)
     testImplementation 'org.mockito:mockito-core'
     testImplementation 'org.mockito:mockito-junit-jupiter'
 
+
     // AssertJ (daha okunaklı assertion)
     testImplementation 'org.assertj:assertj-core'
 
 
+
+    // test database
+    testImplementation 'com.h2database:h2'
+
+
+
 }
+
+test {
+    jvmArgs "-XX:+EnableDynamicAgentLoading"
+}
+
 
 tasks.named('test') {
     useJUnitPlatform()
